WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210748
[Clang 10] Fix warning: definition of implicit copy assignment operator for 'PageBlock' is deprecated because it has a user-declared copy constructor
https://bugs.webkit.org/show_bug.cgi?id=210748
Summary
[Clang 10] Fix warning: definition of implicit copy assignment operator for '...
Charlie Turner
Reported
2020-04-20 08:22:39 PDT
This warning was spamming the build process a lot.
Attachments
Patch
(2.96 KB, patch)
2020-04-20 10:43 PDT
,
Charlie Turner
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Charlie Turner
Comment 1
2020-04-20 10:43:33 PDT
Created
attachment 396990
[details]
Patch
Adrian Perez
Comment 2
2020-04-21 04:21:37 PDT
Patch LGTM, I am tempted to r+ given that all the EWS builders are green, but would be more confident if someone else would also take a quick look as this is fairly low-level code 🤔️
Adrian Perez
Comment 3
2020-04-21 04:28:37 PDT
Comment on
attachment 396990
[details]
Patch Let's wait until tomorrow to land this in case someone else wants to take a look, but the more I stare at it, the more I am convinced it's all right :D
Darin Adler
Comment 4
2020-04-21 08:57:00 PDT
Looks right to me.
EWS
Comment 5
2020-04-21 09:21:35 PDT
Committed
r260431
: <
https://trac.webkit.org/changeset/260431
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 396990
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug