Source/WTF/wtf/PageBlock.h
@@ -66,8 +66,7 @@ inline bool isPowerOfTwo(size_t size) { return !(size & (size - 1)); }
 class PageBlock {
     WTF_MAKE_FAST_ALLOCATED;
 public:
-    PageBlock();
-    PageBlock(const PageBlock&);
+    PageBlock() = default;
     PageBlock(void*, size_t, bool hasGuardPages);
     
     void* base() const { return m_base; }
@@ -82,24 +81,10 @@ public:
     }
 
 private:
-    void* m_realBase;
-    void* m_base;
-    size_t m_size;
+    void* m_realBase { nullptr };
+    void* m_base { nullptr };
+    size_t m_size { 0 };
 };
-
-inline PageBlock::PageBlock()
-    : m_realBase(0)
-    , m_base(0)
-    , m_size(0)
-{
-}
-
-inline PageBlock::PageBlock(const PageBlock& other)
-    : m_realBase(other.m_realBase)
-    , m_base(other.m_base)
-    , m_size(other.m_size)
-{
-}
 
 inline PageBlock::PageBlock(void* base, size_t size, bool hasGuardPages)
     : m_realBase(base)
